kubernetes/apps/home-automation/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: home-assistant
  selector:
    app: home-assistant
